deployment/k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: open-diy-deployment
  namespace: open-diy
  labels:
    app: open-diy
spec:
  replicas: 2
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
  selector:
    matchLabels:
      app: open-diy
  template:
    metadata:
      labels:
        app: open-diy
    spec:
      containers:
        - name: open-diy
          image: ghcr.io/huyvu8051/open-diy:latest
          imagePullPolicy: Always
          ports:
            - name: http
              containerPort: 3000
      imagePullSecrets:
        - name: ghcr-pull-secret
          resources:
            requests:
              memory: "128Mi"
              cpu: "100m"
            limits:
              memory: "256Mi"
              cpu: "500m"
---
apiVersion: v1
kind: Service
metadata:
  name: open-diy-service
  namespace: open-diy
  labels:
    app: open-diy
spec:
  selector:
    app: open-diy
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
  type: ClusterIP
